# SibSUTIs.information_protection

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt
src/crypto-cipher/: CMakeLists.txt
src/crypto-utils/: crypto-utils.cpp  crypto-utils.hpp  crypto-utils.test.cpp
